service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jckli-api-service
spec:
  selector:
    app: jckli-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
